crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__sorting__select_order_by_name.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Achtung Baby"
      },
      {
        "Title": "A Copland Celebration, Vol. I"
      },
      {
        "Title": "Acústico"
      },
      {
        "Title": "Acústico MTV"
      },
      {
        "Title": "Acústico MTV [Live]"
      }
    ]
  }
]
