crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__sorting__sorting_by_nested_relationship_column_with_predicate.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Crazy Train"
      },
      {
        "Name": "I Don't Know"
      }
    ]
  }
]
