crates/tests/databases-tests/src/citus/snapshots/databases_tests__citus__query_tests__sorting__sorting_by_nested_relationship_column_with_predicate_exists.snap
---
source: crates/tests/databases-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Balls to the Wall"
      },
      {
        "Name": "Fast As a Shark"
      },
      {
        "Name": "Princess of the Dawn"
      },
      {
        "Name": "Restless and Wild"
      },
      {
        "Name": "\"?\""
      }
    ]
  }
]
